# mzprotokoll

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  mzprotokoll.desktop
src/: main.rs
